--- a/main.html
+++ b/main.html
@@ -1,12 +1,19 @@
 <!DOCTYPE html>
-  <html>
-  <head>
-  <title>Page Title</title>
-  </head>
-  <body>
-  
-  <h1>This is a Heading</h1>
-  <p>This is a paragraph.</p>
-  
-  </body>
+<html>
+
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width">
+    <title>replit</title>
+    <link href="style.css" rel="stylesheet" type="text/css" />
+</head>
+
+<body>
+    <canvas id="canvi"></canvas>
+    <script src="setup.js"></script>
+<script>
+
+</script>
+</body>
+
 </html>
