--- a/main.html
+++ b/main.html
@@ -10,10 +10,7 @@
 
 <body>
     <canvas id="canvi"></canvas>
-    <script src="setup.js"></script>
-<script>
-
-</script>
+    <script src="script.js"></script>
 </body>
 
 </html>
